postgresql/postgresql-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-postgresql
  namespace: database
spec:
  rules:
  - host: database.lab.int
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: postgresql
            port:
              number: 5432
  ingressClassName: nginx
